EN Translation for entire escort text

--- a/translations/game+intl-icu.en.xlf
+++ b/translations/game+intl-icu.en.xlf
@@ -8125,7 +8125,7 @@
       </notes>
       <segment>
         <source>Gesamte Eskorte</source>
-        <target>Gesamte Eskorte</target>
+        <target>Entire escort</target>
       </segment>
     </unit>
     <unit id="Jh.CarL" name="Bürger in dieser Zone">
