--- a/translations/buildings+intl-icu.en.xlf
+++ b/translations/buildings+intl-icu.en.xlf
@@ -2992,7 +2992,7 @@
       </notes>
       <segment>
         <source>Falls die Lage wirklich verzweifelt ist, könnt ihr beschließen loszuschreien und in Panik zu verfallen. Falls alle Überlebenden mitmachen, wird es die Zombies verwirren (denn sie können mit dieser Art Stress nicht umgehen) und euch einige virtuelle Verteidigungespuntke einbringen... Genau, das ist natürlich Unsinn.</source>
-        <target>If the situation gets really desperate, you can decide to scream and panic. The advantage of this is that if all the survivors do it, this will disorientate the zombies (who really don't need that kind of stress) and earns you sime virtual defence points... Yeah, its a load of nonsense..</target>
+        <target>If the situation gets really desperate, you can decide to scream and panic. The advantage of this is that if all the survivors do it, this will disorientate the zombies (who really don't need that kind of stress) and earns you some virtual defence points... Yeah, it's a load of nonsense..</target>
       </segment>
     </unit>
     <unit id="BiIqI4s">
