--- a/translations/items+intl-icu.de.xlf
+++ b/translations/items+intl-icu.de.xlf
@@ -2350,13 +2350,13 @@
     <unit id="9Wgu8lv" name="Wasser suchen">
       <segment>
         <source>Wasser suchen</source>
-        <target>Wasser suchen</target>
+        <target>Wasser</target>
       </segment>
     </unit>
     <unit id="JAlTzuc" name="Essen suchen">
       <segment>
         <source>Essen suchen</source>
-        <target>Essen suchen</target>
+        <target>Essen</target>
       </segment>
     </unit>
     <unit id="TmH05e3" name="Tarnen">
@@ -5831,6 +5831,12 @@
       <segment>
         <source>Es ist nicht so appetitlich wie ein &lt;strong&gt;schöner, frischer, zappelnder Mensch&lt;/strong&gt;, aber es erfüllt seinen Zweck und lässt den &lt;strong&gt;Hunger&lt;/strong&gt; ein wenig nachlassen.... Zum Glück ist das Fleisch ziemlich zart, sonst wäre diese Mahlzeit furchtbar gewesen.&lt;hr/&gt;Nach ein paar Sekunden spürst du den furchtbaren Nachgeschmack...</source>
         <target><![CDATA[Es ist nicht so appetitlich wie ein <strong>schöner, frischer, zappelnder Mensch</strong>, aber es erfüllt seinen Zweck und lässt den <strong>Hunger</strong> ein wenig nachlassen.... Zum Glück ist das Fleisch ziemlich zart, sonst wäre diese Mahlzeit furchtbar gewesen.<hr/>Nach ein paar Sekunden spürst du den furchtbaren Nachgeschmack...]]></target>
+      </segment>
+    </unit>
+    <unit id="Z37r5VN" name="Erhalten:">
+      <segment>
+        <source>Erhalten:</source>
+        <target>Erhalten:</target>
       </segment>
     </unit>
   </file>
