--- a/translations/game+intl-icu.en.xlf
+++ b/translations/game+intl-icu.en.xlf
@@ -24564,5 +24564,15 @@
         <target><![CDATA[<strong>{citizen1}</strong> ist so oft zur Bank gerannt, dass es ja irgendwann mal auffallen MUSSTE! Allein gestern waren es <strong>{random} Mal</strong>.]]></target>
       </segment>
     </unit>
+    <unit id="bVo7YAL" name="{shaman} hat {citizen} soeben mit seinen mystischen Schamanenkräften geheilt!">
+      <notes>
+        <note category="german">{shaman} hat {citizen} soeben mit seinen mystischen Schamanenkräften geheilt!</note>
+        <note category="from">db://LogEntryTemplate</note>
+      </notes>
+      <segment>
+        <source>{shaman} hat {citizen} soeben mit seinen mystischen Schamanenkräften geheilt!</source>
+        <target>{shaman} has just healed {citizen} thanks to their shamanic powers!</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
