--- a/translations/game+intl-icu.de.xlf
+++ b/translations/game+intl-icu.de.xlf
@@ -15479,7 +15479,7 @@
     <unit id="eYaqEgt" name="Zyanid (poison)">
       <segment>
         <source>Zyanid (poison)</source>
-        <target>Zyanid (poison)</target>
+        <target>Zyanid</target>
       </segment>
     </unit>
     <unit id="oGlsrDH" name="Phenol">
