FR Translation for survivalist book

--- a/translations/items+intl-icu.fr.xlf
+++ b/translations/items+intl-icu.fr.xlf
@@ -9396,7 +9396,7 @@
       </notes>
       <segment>
         <source>Erhalten:</source>
-        <target>Erhalten:</target>
+        <target>Obtenir :</target>
       </segment>
     </unit>
   </file>
