ES Translation for survivalist book

--- a/translations/items+intl-icu.es.xlf
+++ b/translations/items+intl-icu.es.xlf
@@ -9364,7 +9364,7 @@
       </notes>
       <segment>
         <source>Erhalten:</source>
-        <target>Erhalten:</target>
+        <target>Obtener :</target>
       </segment>
     </unit>
   </file>
